--- a/index.html
+++ b/index.html
@@ -1,49 +1,45 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-  <!--google fonts-->
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Pattaya&display=swap" rel="stylesheet">
-
-    <!-- Meta tags Obrigatórias -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-    <title>Atividade 2</title>
-	<!--link dos arquivos css do bootstrap-->
-	<link href="css/bootstrap.css" rel="stylesheet">
-	<link href="css/bootstrap-reboot.css" rel="stylesheet">
-	<link href="css/bootstrap-grid.css" rel="stylesheet">
-	
-	    <link rel="stylesheet" href="css/estilo.css">
-	
-  </head>
-    <body>
-        <div class="container">
-            <div class="row">
-                <!-- BORDER PODE SER A BORDA 
-                EXEMPLO: <div class="col-6 border"> -->
-                <div class="col-lg-3 ciano" style="margin: 1px;"></div>
-                <div class="col-lg-3 vermelho" style="margin: 1px;"></div>
-                <div class="col-lg-3 azul" style="margin: 1px;"></div>
-                <div class="col-lg-3 amarelo" style="margin: 1px;"></div>
-                <div class="col-lg-3 roxo" style="margin: 1px;"></div>
-                <div class="col-lg-3 verde" style="margin: 1px;"></div>
-                <div class="col-lg-3 laranja" style="margin: 1px;"></div>
-                <div class="col-lg-3 turquesa" style="margin: 1px;"></div>
-                <div class="col-lg-3 marrom" style="margin: 1px;"></div>
-            </div>
-        </div>
-
-  
-   <!-- JavaScript (Opcional) -->
-    <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-	</main>
-  </body>
-</html>
+<!DOCTYPE HTML>
+<HTML>
+    <html lang-"pt-br">
+	    <head>
+	     <meta charset="utf-8">
+         <meta name="author" content-"Guilherme Macanan">
+	     <title> Atividade 03 Nova Semântica HTML5</title>
+		
+<header>
+        <h1>Título desta Página</h1>
+		<p>Descrição ou Slogan</p>
+</header>
+        </head>
+		<body>
+		    <header>
+			   <h1>Semântica HTML5</h1>
+			</header>
+		
+		<p>Inserindo imagem</p>
+		    <p><img src=img/download.jpg"" all=""></p>
+			<nav>
+			   <ul>
+			      <li><a href="#">HOME</a></li>
+				  <li><a href="#">PRODUTO</a></li>
+				  <li><a href="#">Contato</a></li>
+			   </ul>
+			</nav>
+			<section>
+			   <h1>HEADER</h1>
+			   <p>O elemento representa um grupo de suporte introdutório ou navegacional. Pode conter alguns elementos de cabeçalho mas também outros elementos como um logo, seções de cabeçalho, formulário de pesquisa, e outros.</p>
+			   <hr>
+			   <h1>NAV</h1>
+               <p>representa uma seção de uma página que aponta para outras páginas ou para outras áreas da página, ou seja, uma seção com links de navegação.</p>
+               <h1>Section</h1>			   
+			   <p>representa uma seção genérica contida em um documento HTML, geralmente com um título, quando não existir um elemento semântico mais específico para representá-lo.</p>
+		    <aside>
+               <p>Algum conteudo relacionado a um &lt;article&gt;</p>
+            </aside>
+			</section>    
+		<footer>Copyright</footer>
+		</body>
+		<h1 id-"topo">HTML</h1>
+		<p><a href=""https://www.w3schools.com/" target="blank">Visitar site da w3Shool</a></p>
+		<adress>Guilherme Macanan</adress>
+</HTML>
