--- a/index1.html
+++ b/index1.html
@@ -1,39 +1,38 @@
 <!DOCTYPE html>
+<html>
+<!--tag para definir o idioma-->
 <html lang="pt-br">
-  <head>
-  <!--google fonts-->
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Pattaya&display=swap" rel="stylesheet">
-
-    <!-- Meta tags Obrigatórias -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
- 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-    <title>Bloco de Cores</title>
-	<!--link dos arquivos css do bootstrap-->
-	<link href="css/bootstrap.css" rel="stylesheet">
-	<link href="css/bootstrap-reboot.css" rel="stylesheet">
-	<link href="css/bootstrap-grid.css" rel="stylesheet">
+  <head><!-- abertura do cabeçalho-->    
+	<meta charset ="utf-8">
+	<meta name="author" content="Guilherme Macanan">
+	<meta name="description" content="Este site mostra as tags básicas pro html">
+	<meta name="keywords" content="aula, web1, metadados, atributos.html">
+	<meta name="robots" content="all">
+	<meta name="robots" content="index,nofollow">
+	<meta name="robots" content="noindex,follow">
+	<meta name="robots" content="none">
 	
-	   <link rel="stylesheet" href="css/estilo1.css">
-	
-	<div class="container">
-	    <div class "row">
-		<div class="col-lg-12 azul" style=margin: 1px"></div>
-		<div class="col-lg-6 roxo" style=margin: 1px"></div>
-		<div class="col-lg-6 rosa" style=margin: 1px"></div>
-		<div class="col-lg-12 vermelho" style=margin: 1px"></div>
-		</div>
-	</div>
-	
-	<!-- JavaScript (Opcional) -->
-    <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-	</main>
-  </body>
+	<title>Aula 01</title>
+  </head>   <!-- fechando o cabeçalho-->
+    <body><!-- abrindo o corpo da página-->
+	   <h1 align="center">Desenvolvimento de web I</h1>
+	   <br><!--quebra de linha-->
+	   <h2 align="center">HTML</h2>
+	   <hr><!--linha horizontal-->
+	      <p><marquee><b>HTML (Linguagem de Marcação de HiperTexto)</b> é o <del>bloco</del> de construção mais básico da web.<br> Define o significado e a estrutura do conteúdo da web. Outras tecnologias além do HTML geralmente são usadas para descrever a aparência/apresentação (CSS) ou a funcionalidade/comportamento (JavaScript) de uma página da web.</marquee></p>
+	   <h3 align-"right">css</h3>
+       <hr>
+	      <p>CSS (Cascading Style Sheets ou Folhas de Estilo em Cascata) é uma <strong>linguagem de estilo</strong> (en-US) usada para descrever a apresentação de um documento escrito em HTML ou em XML (incluindo várias linguagens em XML como SVG, MathML ou XHTML). O CSS descreve como elementos são mostrados na tela, no papel, na fala ou em outras mídias.</p>
+	   <h4 align="left">JAVASCRIPT</h4>
+	   <hr>
+	      <p>JavaScript é uma linguagem de script orientada a <i>objetos</i>, multiplataforma. É uma linguagem pequena e leve. Dentro de um ambiente de host (por exemplo, um navegador web) o JavaScript pode ser ligado aos objetos deste ambiente para prover um controle programático sobre eles.</p>
+       <h5>Bootstrap</h5>
+	      <p align="justify">O Bootstrap é uma ferramenta gratuita para desenvolvimento <u>HTML</u>, CSS e JS. Crie protótipos rápidamente ou aplicações completas com nossas variáveis e mixins Sass, sistemas de grid responsivo, componentes pré-construídos e poderosos plugins com jQuery.</p>
+	   <h6>JQuery</h6>
+	      <p>A <big>jQuery</big> é uma biblioteca de funções JavaScript que interage com o HTML, desenvolvida para simplificar os <ins>scripts</ins> interpretados no navegador do cliente (client-side).</p>
+	   <img align="center"><img src="img/logo.jpeg" all="html"></p>
+	   <br>
+	   <br>
+	   <iframe src="index.html"></iframe> 
+	</body><!-- fechando o corpo da página-->	
 </html>
